2007-09-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed 82760: Nul ref enableing autocomplete.

2007-09-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82223: Overload selection does not
	  work when breaking the line.

2007-09-10   <> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82683: MonoDevelop should generate
	  XML documentation when /// is typed.

2007-09-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Track api changes.

2007-09-07  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed 82505: No autocomplete for static members. Fixed
	  some other resolve cases too. (non static members only in non static
	  methods)

2007-09-07  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Handled bug 82714: Invalid offset in text editor.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,
	  Gui/FormattingPanel.cs, Parser/Resolver.cs,
	  FormattingStrategy/CSharpFormattingStrategy.cs,
	  FormattingStrategy/CSharpFormattingProperties.cs,
	  gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, CSharpAmbience.cs:
	  Changes due to new property infrastructure.

2007-08-24  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82555: Xml comments activating
	  incorrectly.

2007-08-23  Mike Krüger <mkrueger@novell.com> 

	* CSharpEnhancedCodeProvider.cs, Parser/Parser.cs, Parser/CSharpVisitor.cs,
	  Parser/CodeGenerator.cs, Parser/Resolver.cs, Parser/TypeVisitor.cs,
	  Parser/LanguageItemVisitor.cs,
	  Parser/SharpDevelopTree/GenericParameter.cs,
	  Parser/SharpDevelopTree/Destructor.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/ReturnType.cs, Parser/SharpDevelopTree/Class.cs,
	  Parser/SharpDevelopTree/Constructor.cs: Changed to the latest NRefactory
	  version.

2007-08-23  Ankit Jain  <jankit@novell.com>
